--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -4,8 +4,8 @@ VERSION="2.0.0"
 
 [DOCUMENTATION]
 ORG_NAME="Quantum Financial Systems"
-ORG_URL="https://jaws.com"
-ORG_LOGO="https://jaws.com/Images/DEMOCRACY.png"
+ORG_URL="https://www.jaws.com"
+ORG_LOGO="https://www.jaws.com/images/DEMOCRACY.png"
 ORG_DESCRIPTION="Advancement of world financial systems into a new era of democracy, justice, and efficiency"
 ORG_PHYSICAL_ADDRESS="California, United States"
 
