--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -4,8 +4,8 @@ VERSION="2.0.0"
 
 [DOCUMENTATION]
 ORG_NAME="Quantum Financial Systems"
-ORG_URL="https://www.jaws.com"
-ORG_LOGO="https://www.jaws.com/images/DEMOCRACY.png"
+ORG_URL="https://www.democracy-token.com"
+ORG_LOGO="https://www.democracy-token.com/images/DEMOCRACY.png"
 ORG_DESCRIPTION="Advancement of world financial systems into a new era of democracy, justice, and efficiency"
 ORG_PHYSICAL_ADDRESS="California, United States"
 
@@ -19,7 +19,7 @@ issuer="GDEMOYMTQQ4ZHWVJFIQPORWGQYV3BXQKIRWZ7X4ETB5VZTON3BBNLETI"
 display_decimals=7
 name="DEMOCRACY Tokens"
 desc="A fairly distributed token on the stellar network, with no whales possible thanks to the unique automated trustline authorization system. Compatible with ISO20022."
-conditions="There are 1,000,000,000 DEMOCRACY tokens in existence. No individual can own more than 0.1% of the total supply, thus eliminating the possibility of whales. The distribution account will sell the initial supply according to a constant product invariant, to ensure equitable access to the token."
-image="https://jaws.com/images/DEMOCRACY.png"
-fixed_number=1000000000
+conditions="There are 2,000,000,000 DEMOCRACY tokens in existence. No individual can own more than 0.05% of the total supply, thus eliminating the possibility of whales. The distribution account will sell the initial supply according to a constant product invariant, to ensure equitable access to the token."
+image="https://democracy-token.com/images/DEMOCRACY.png"
+fixed_number=2000000000
 is_asset_anchored=false
